17 - mapping entities with Mapstruct